kube/ollama/base/ollama-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ollama-service
#  namespace: open-webui
spec:
  selector:
    app: ollama
  ports:
  - protocol: TCP
    port: 11434
    targetPort: 11434

# apiVersion: v1
# kind: Service
# metadata:
#   name: ollama
# #  namespace: ollama
# spec:
#   type: NodePort
#   selector:
#     name: ollama
#   ports:
#   - name: ollama-port
#     protocol: TCP
#     port: 11434
#     targetPort: 11434
#     nodePort: 30000
